Fixed double clicking issue in Events, made scrollbar always visible.

--- a/styles/main.css
+++ b/styles/main.css
@@ -67,6 +67,19 @@ body {
     overflow-x: hidden;
 }
 
+/* Scrollbar: make it visible all the time */
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 10px;
+}
+  
+  ::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+    box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
+
 /* container */
 
 .container {
@@ -443,8 +456,9 @@ section {
     padding: 20px 0px 20px 0px;
 }
 
-.events-instance:hover {
+.events-instance h4:hover {
     cursor: pointer;
+    color: var(--main-txt-color-light);
 }
 
 .events-instance h4 {
